updated entities & some controllers refactoring